--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,8 @@
     </head>
     <body>
         <desk-view></desk-view>
-       
-        
-
-
+        <!-- <calculater-view></calculater-view> -->
+       <minesweaper-view></minesweaper-view>
         <script nomodule src="build.js"></script>
     </body>
 </html>
