Börjat med chatt

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,7 @@
     </head>
     <body>
         <desk-view></desk-view>
-        <calculater-view></calculater-view>
-       <!-- <minesweaper-view></minesweaper-view> -->
+        <chatt-view></chatt-view>
         <script nomodule src="build.js"></script>
     </body>
 </html>
